--- a/config/locales/models/zh-CN.yml
+++ b/config/locales/models/zh-CN.yml
@@ -11,3 +11,4 @@ zh-CN:
       graph_field_record: 产业图谱企业记录
       macro_field_record: 产业宏观分析
       feishu_excel_import: 飞书源文档导入
+      industry_analysis_task: 张江产业分析数据推送
